18 - K8 full assignment/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:

      tolerations:
      - key: "tier"
        operator: "Equal"
        value: "frontend"
        effect: "NoSchedule"

      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pvc

      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80

        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
