18 - K8 full assignment/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: "mariadb-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:

      terminationGracePeriodSeconds: 10

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - database

      containers:
      - name: mariadb
        image: mariadb:latest

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: mariadb-volume
          mountPath: /var/lib/mysql

      volumes:
        - name: mariadb-volume
          persistentVolumeClaim:
            claimName: pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
#  type: LoadBalancer
