18 - K8 full assignment/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpmyadmin
    spec:

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - "mariadb"
            topologyKey: kubernetes.io/hostname

      containers:
      - image: phpmyadmin:latest
        name: phpmyadmin
        ports:
          - containerPort: 80

status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
