18 - K8 full assignment/wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
